force-app/main/default/objects/Change_Impact__c/Change_Impact__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - Custom Object to show the Change Impact</description>
    <label>Change Impact</label>
    <nameField>
        <label>Change Impact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Impacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>