force-app/main/default/objects/Change_Impact__c/fields/Assigned_SME__c.field-meta.xml
<CustomField>
    <fullName>Assigned_SME__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned SME</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Impacts</relationshipName>
    <type>Lookup</type>
</CustomField>