force-app/main/default/objects/Change_Impact__c/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <inlineHelpText>Describe the pros of the change</inlineHelpText>
    <label>Benefits</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>