force-app/main/default/objects/Change_Impact__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <label>Capability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD 1</fullName>
            </value>
            <value>
                <fullName>TBD 2</fullName>
            </value>
            <value>
                <fullName>TBD 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>