force-app/main/default/objects/Change_Impact__c/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <inlineHelpText>Describe the cons of the change</inlineHelpText>
    <label>Challenges</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>