force-app/main/default/objects/Change_Impact__c/fields/Change_Impact__c.field-meta.xml
<CustomField>
    <fullName>Change_Impact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Pick the closest aligned capability</inlineHelpText>
    <label>Change Impact</label>
    <referenceTo>Change_Impact__c</referenceTo>
    <relationshipLabel>Change Impacts</relationshipLabel>
    <relationshipName>Change_Impacts</relationshipName>
    <type>Lookup</type>
</CustomField>