force-app/main/default/objects/Change_Impact__c/fields/Change_Impact_Score__c.field-meta.xml
<CustomField>
    <fullName>Change_Impact_Score__c</fullName>
    <formula>(value(text(Frequency__c)) + value(text(Degree_Of_Change__c))) * value(text(Strategic_Impact__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Impact Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>