force-app/main/default/objects/Change_Impact__c/fields/Change_Impact_Stage__c.field-meta.xml
<CustomField>
    <fullName>Change_Impact_Stage__c</fullName>
    <inlineHelpText>Stage of the change impact</inlineHelpText>
    <label>Change Impact Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identified</fullName>
            </value>
            <value>
                <fullName>Being Validated</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>