force-app/main/default/objects/Change_Impact__c/fields/Current_State__c.field-meta.xml
<CustomField>
    <fullName>Current_State__c</fullName>
    <inlineHelpText>Describe the current process</inlineHelpText>
    <label>Current State</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>