force-app/main/default/objects/Change_Impact__c/fields/Degree_Of_Change__c.field-meta.xml
<CustomField>
    <fullName>Degree_Of_Change__c</fullName>
    <inlineHelpText>5 = High (completely new process / role)
4 = Medium - High (large number of changes to the as-is)
3 = Medium (multiple changes to the as-is)
2 = Low - Medium (small changes to the as-is)
1 = Low (little change to the as-is process)</inlineHelpText>
    <label>Degree Of Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>