force-app/main/default/objects/Change_Impact__c/fields/EMEA_Variance__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Variance__c</fullName>
    <inlineHelpText>Please use this field (if applicable)  to describe regional or country specific differences</inlineHelpText>
    <label>EMEA Variance</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>