force-app/main/default/objects/Change_Impact__c/fields/Expected_Audience_Response__c.field-meta.xml
<CustomField>
    <fullName>Expected_Audience_Response__c</fullName>
    <inlineHelpText>Define how the impact will be received among those it affects</inlineHelpText>
    <label>Expected Audience Response</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>