force-app/main/default/objects/Change_Impact__c/fields/Future_State__c.field-meta.xml
<CustomField>
    <fullName>Future_State__c</fullName>
    <inlineHelpText>Describe the new process</inlineHelpText>
    <label>Future State</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>