force-app/main/default/objects/Change_Impact__c/fields/Impact_Description__c.field-meta.xml
<CustomField>
    <fullName>Impact_Description__c</fullName>
    <description>Impact Description</description>
    <inlineHelpText>Provide a detailed description of the change identified</inlineHelpText>
    <label>Impact Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>