force-app/main/default/objects/Change_Impact__c/fields/Impact_Id__c.field-meta.xml
<CustomField>
    <fullName>Impact_Id__c</fullName>
    <description>Change Impact Id</description>
    <displayFormat>CI-{0000}</displayFormat>
    <label>Impact Id</label>
    <type>AutoNumber</type>
</CustomField>