force-app/main/default/objects/Change_Impact__c/fields/Individual_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Individual_Stakeholder__c</fullName>
    <label>Individual Stakeholder</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD 1</fullName>
            </value>
            <value>
                <fullName>TBD 2</fullName>
            </value>
            <value>
                <fullName>TBD 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>