force-app/main/default/objects/Change_Impact__c/fields/Individual_Stakeholder_Others__c.field-meta.xml
<CustomField>
    <fullName>Individual_Stakeholder_Others__c</fullName>
    <label>Individual Stakeholder Others</label>
    <length>120</length>
    <type>Text</type>
</CustomField>