force-app/main/default/objects/Change_Impact__c/fields/Notes_for_MOC__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_MOC__c</fullName>
    <inlineHelpText>Please document relevant notes impacting change management solutions</inlineHelpText>
    <label>Notes for Change Management</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>