force-app/main/default/objects/Change_Impact__c/fields/Other_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Other_Stakeholder__c</fullName>
    <inlineHelpText>Please use this field (if applicable) to describe any specific change impacts for the other identified stakeholders</inlineHelpText>
    <label>Other Stakeholder Impact Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>