force-app/main/default/objects/Change_Impact__c/fields/Reason_For_Removal__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Removal__c</fullName>
    <inlineHelpText>Identify the reason for removal (i.e. duplicate, irrelevant, out of scope). If duplicate, please reference the live Change Impact.</inlineHelpText>
    <label>Reason For Removal</label>
    <type>TextArea</type>
</CustomField>