force-app/main/default/objects/Change_Impact__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>Pick the region(s) impacted by the change</inlineHelpText>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>ASIA</fullName>
            </value>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>