force-app/main/default/objects/Change_Impact__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identify the release in which the change occurs</inlineHelpText>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Change Impacts</relationshipLabel>
    <relationshipName>Change_Impacts</relationshipName>
    <type>Lookup</type>
</CustomField>