force-app/main/default/objects/Change_Impact__c/fields/Requirement_Theme__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Theme__c</fullName>
    <label>Requirement Theme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD 1</fullName>
            </value>
            <value>
                <fullName>TBD 2</fullName>
            </value>
            <value>
                <fullName>TBD 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>