force-app/main/default/objects/Change_Impact__c/fields/Strategic_Impact__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Impact__c</fullName>
    <inlineHelpText>1.0 - 0.9 = Disables customer support if not executed
0.8 - 0.7 = Could result in customer not being able to receive quality support 
0.6 - 0.5 = Impact on HP &amp; Partners, but not customers
0.4 - 0.3 = No customer impact &amp; minimal impact on HP &amp; Par</inlineHelpText>
    <label>Strategic Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0.1</fullName>
            </value>
            <value>
                <fullName>0.2</fullName>
            </value>
            <value>
                <fullName>0.3</fullName>
            </value>
            <value>
                <fullName>0.4</fullName>
            </value>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>0.6</fullName>
            </value>
            <value>
                <fullName>0.7</fullName>
            </value>
            <value>
                <fullName>0.8</fullName>
            </value>
            <value>
                <fullName>0.9</fullName>
            </value>
            <value>
                <fullName>1.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>