force-app/main/default/objects/Change_Impact__c/fields/Track_WorkStream__c.field-meta.xml
<CustomField>
    <fullName>Track_WorkStream__c</fullName>
    <inlineHelpText>Identify the Track/Workstream that the change is aligned to</inlineHelpText>
    <label>Track/WorkStream</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD 1</fullName>
            </value>
            <value>
                <fullName>TBD 2</fullName>
            </value>
            <value>
                <fullName>TBD 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>