force-app/main/default/objects/Change_Impact__c/fields/Training_Material_Object__c.field-meta.xml
<CustomField>
    <fullName>Training_Material_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Material</label>
    <referenceTo>Training_Material__c</referenceTo>
    <relationshipLabel>Change Impacts</relationshipLabel>
    <relationshipName>Change_Impacts</relationshipName>
    <type>Lookup</type>
</CustomField>