force-app/main/default/objects/Change_Impact__c/fields/Training_Stakeholder_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Training_Stakeholder_Grouping__c</fullName>
    <label>Training Stakeholder Grouping</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD1</fullName>
            </value>
            <value>
                <fullName>TBD2</fullName>
            </value>
            <value>
                <fullName>TBD 3</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>