force-app/main/default/objects/Change_Impact__c/fields/TrainingMaterial_Object__c.field-meta.xml
<CustomField>
    <fullName>TrainingMaterial_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Material</label>
    <referenceTo>Training_Material__c</referenceTo>
    <relationshipLabel>Change Impacts (Training Material Object)</relationshipLabel>
    <relationshipName>Change_Impacts2</relationshipName>
    <type>Lookup</type>
</CustomField>