force-app/main/default/objects/Change_Impact__c/fields/Type_Of_Change__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Change__c</fullName>
    <inlineHelpText>Select one or more areas impacted by this change</inlineHelpText>
    <label>Type Of Change</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Organization Structure</fullName>
            </value>
            <value>
                <fullName>Policies &amp; Standards</fullName>
            </value>
            <value>
                <fullName>Process &amp; Behavior</fullName>
            </value>
            <value>
                <fullName>Roles &amp; Responsibilities</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Tools &amp; Templates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>