force-app/main/default/objects/Change_Impact__c/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Use Case</label>
    <referenceTo>Use_Case__c</referenceTo>
    <relationshipLabel>Change Impacts</relationshipLabel>
    <relationshipName>Change_Impacts</relationshipName>
    <type>Lookup</type>
</CustomField>