force-app/main/default/objects/Change_Impact__c/validationRules/Reason_for_removal_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_removal_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Change_Impact_Stage__c, &#39;Removed&#39;),
ISBLANK(Reason_For_Removal__c))</errorConditionFormula>
    <errorDisplayField>Reason_For_Removal__c</errorDisplayField>
    <errorMessage>Reason for Removal is required when Change Impact Stage is set to &#39;Removed&#39;. Please enter details.</errorMessage>
</ValidationRule>